add comments to notebooks

--- a/notebooks/chimestry papers kg.ipynb
+++ b/notebooks/chimestry papers kg.ipynb
@@ -5163,263 +5163,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'T080': 328,\n",
-       " 'T169': 201,\n",
-       " 'T109': 194,\n",
-       " 'T081': 163,\n",
-       " 'T070': 127,\n",
-       " 'T052': 124,\n",
-       " 'T059': 121,\n",
-       " 'T082': 118,\n",
-       " 'T170': 93,\n",
-       " 'T033': 82,\n",
-       " 'T061': 69,\n",
-       " 'T078': 68,\n",
-       " 'T197': 66,\n",
-       " 'T196': 65,\n",
-       " 'T167': 59,\n",
-       " 'T062': 46,\n",
-       " 'T073': 45,\n",
-       " 'T047': 43,\n",
-       " 'T116': 40,\n",
-       " 'T079': 38,\n",
-       " 'T067': 38,\n",
-       " 'T044': 35,\n",
-       " 'T041': 33,\n",
-       " 'T104': 33,\n",
-       " 'T058': 27,\n",
-       " 'T032': 27,\n",
-       " 'T028': 27,\n",
-       " 'T034': 27,\n",
-       " 'T121': 26,\n",
-       " 'T040': 24,\n",
-       " 'T090': 24,\n",
-       " 'T038': 24,\n",
-       " 'T023': 23,\n",
-       " 'T122': 21,\n",
-       " 'T130': 20,\n",
-       " 'T083': 20,\n",
-       " 'T057': 19,\n",
-       " 'T168': 18,\n",
-       " 'T074': 18,\n",
-       " 'T077': 17,\n",
-       " 'T114': 17,\n",
-       " 'T002': 16,\n",
-       " 'T060': 15,\n",
-       " 'T046': 14,\n",
-       " 'T191': 13,\n",
-       " 'T039': 12,\n",
-       " 'T103': 11,\n",
-       " 'T075': 11,\n",
-       " 'T026': 11,\n",
-       " 'T007': 11,\n",
-       " 'T037': 10,\n",
-       " 'T055': 10,\n",
-       " 'T031': 9,\n",
-       " 'T043': 9,\n",
-       " 'T129': 9,\n",
-       " 'T056': 7,\n",
-       " 'T068': 7,\n",
-       " 'T029': 7,\n",
-       " 'T098': 7,\n",
-       " 'T091': 6,\n",
-       " 'T120': 6,\n",
-       " 'T069': 6,\n",
-       " 'T123': 6,\n",
-       " 'T042': 6,\n",
-       " 'T049': 6,\n",
-       " 'T201': 5,\n",
-       " 'T053': 5,\n",
-       " 'T045': 5,\n",
-       " 'T001': 5,\n",
-       " 'T066': 4,\n",
-       " 'T195': 4,\n",
-       " 'T048': 4,\n",
-       " 'T054': 3,\n",
-       " 'T024': 3,\n",
-       " 'T097': 3,\n",
-       " 'T185': 3,\n",
-       " 'T184': 3,\n",
-       " 'T025': 3,\n",
-       " 'T099': 2,\n",
-       " 'T004': 2,\n",
-       " 'T131': 2,\n",
-       " 'T190': 2,\n",
-       " 'T096': 2,\n",
-       " 'T015': 2,\n",
-       " 'T008': 2,\n",
-       " 'T092': 2,\n",
-       " 'T022': 2,\n",
-       " 'T204': 2,\n",
-       " 'T063': 2,\n",
-       " 'T016': 2,\n",
-       " 'T087': 1,\n",
-       " 'T125': 1,\n",
-       " 'T005': 1,\n",
-       " 'T093': 1,\n",
-       " '': 1,\n",
-       " 'T064': 1,\n",
-       " 'T089': 1,\n",
-       " 'T171': 1,\n",
-       " 'T013': 1,\n",
-       " 'T018': 1,\n",
-       " 'T020': 1}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "codes=[]\n",
-    "for key in chimestry_papers : \n",
-    "    for keyword in chimestry_papers[key]['keywords']:\n",
-    " \n",
-    "            codes.append(keyword['types'])\n",
-    "import collections\n",
-    "counter=collections.Counter(codes)\n",
-    "\n",
-    "counter = {k: v for k, v in sorted(counter.items(), key=lambda item: item[1],reverse = True)}\n",
-    "counter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('T080', 'Qualitative Concept'),\n",
-       " ('T169', 'Functional Concept'),\n",
-       " ('T109', 'Organic Chemical'),\n",
-       " ('T081', 'Quantitative Concept'),\n",
-       " ('T070', 'Natural Phenomenon or Process'),\n",
-       " ('T052', 'Activity'),\n",
-       " ('T059', 'Laboratory Procedure'),\n",
-       " ('T082', 'Spatial Concept'),\n",
-       " ('T170', 'Intellectual Product'),\n",
-       " ('T033', 'Finding'),\n",
-       " ('T061', 'Therapeutic or Preventive Procedure'),\n",
-       " ('T078', 'Idea or Concept'),\n",
-       " ('T197', 'Inorganic Chemical'),\n",
-       " ('T196', 'Element, Ion, or Isotope'),\n",
-       " ('T167', 'Substance'),\n",
-       " ('T062', 'Research Activity'),\n",
-       " ('T073', 'Manufactured Object'),\n",
-       " ('T047', 'Disease or Syndrome'),\n",
-       " ('T116', 'Amino Acid, Peptide, or Protein'),\n",
-       " ('T079', 'Temporal Concept'),\n",
-       " ('T067', 'Phenomenon or Process'),\n",
-       " ('T044', 'Molecular Function'),\n",
-       " ('T041', 'Mental Process'),\n",
-       " ('T104', 'Chemical Viewed Structurally'),\n",
-       " ('T058', 'Health Care Activity'),\n",
-       " ('T032', 'Organism Attribute'),\n",
-       " ('T028', 'Gene or Genome'),\n",
-       " ('T034', 'Laboratory or Test Result'),\n",
-       " ('T121', 'Pharmacologic Substance'),\n",
-       " ('T040', 'Organism Function'),\n",
-       " ('T090', 'Occupation or Discipline'),\n",
-       " ('T038', 'Biologic Function'),\n",
-       " ('T023', 'Body Part, Organ, or Organ Component'),\n",
-       " ('T122', 'Biomedical or Dental Material'),\n",
-       " ('T130', 'Indicator, Reagent, or Diagnostic Aid'),\n",
-       " ('T083', 'Geographic Area'),\n",
-       " ('T057', 'Occupational Activity'),\n",
-       " ('T168', 'Food'),\n",
-       " ('T074', 'Medical Device'),\n",
-       " ('T077', 'Conceptual Entity'),\n",
-       " ('T114', 'Nucleic Acid, Nucleoside, or Nucleotide'),\n",
-       " ('T002', 'Plant'),\n",
-       " ('T060', 'Diagnostic Procedure'),\n",
-       " ('T046', 'Pathologic Function'),\n",
-       " ('T191', 'Neoplastic Process'),\n",
-       " ('T039', 'Physiologic Function'),\n",
-       " ('T103', 'Chemical'),\n",
-       " ('T075', 'Research Device'),\n",
-       " ('T026', 'Cell Component'),\n",
-       " ('T007', 'Bacterium'),\n",
-       " ('T037', 'Injury or Poisoning'),\n",
-       " ('T055', 'Individual Behavior'),\n",
-       " ('T031', 'Body Substance'),\n",
-       " ('T043', 'Cell Function'),\n",
-       " ('T129', 'Immunologic Factor'),\n",
-       " ('T056', 'Daily or Recreational Activity'),\n",
-       " ('T068', 'Human-caused Phenomenon or Process'),\n",
-       " ('T029', 'Body Location or Region'),\n",
-       " ('T098', 'Population Group'),\n",
-       " ('T091', 'Biomedical Occupation or Discipline'),\n",
-       " ('T120', 'Chemical Viewed Functionally'),\n",
-       " ('T069', 'Environmental Effect of Humans'),\n",
-       " ('T123', 'Biologically Active Substance'),\n",
-       " ('T042', 'Organ or Tissue Function'),\n",
-       " ('T049', 'Cell or Molecular Dysfunction'),\n",
-       " ('T201', 'Clinical Attribute'),\n",
-       " ('T053', 'Behavior'),\n",
-       " ('T045', 'Genetic Function'),\n",
-       " ('T001', 'Organism'),\n",
-       " ('T066', 'Machine Activity'),\n",
-       " ('T195', 'Antibiotic'),\n",
-       " ('T048', 'Mental or Behavioral Dysfunction'),\n",
-       " ('T054', 'Social Behavior'),\n",
-       " ('T024', 'Tissue'),\n",
-       " ('T097', 'Professional or Occupational Group'),\n",
-       " ('T185', 'Classification'),\n",
-       " ('T184', 'Sign or Symptom'),\n",
-       " ('T025', 'Cell'),\n",
-       " ('T099', 'Family Group'),\n",
-       " ('T004', 'Fungus'),\n",
-       " ('T131', 'Hazardous or Poisonous Substance'),\n",
-       " ('T190', 'Anatomical Abnormality'),\n",
-       " ('T096', 'Group'),\n",
-       " ('T015', 'Mammal'),\n",
-       " ('T008', 'Animal'),\n",
-       " ('T092', 'Organization'),\n",
-       " ('T022', 'Body System'),\n",
-       " ('T204', 'Eukaryote'),\n",
-       " ('T063', 'Molecular Biology Research Technique'),\n",
-       " ('T016', 'Human'),\n",
-       " ('T087', 'Amino Acid Sequence'),\n",
-       " ('T125', 'Hormone'),\n",
-       " ('T005', 'Virus'),\n",
-       " ('T093', 'Health Care Related Organization'),\n",
-       " ('T064', 'Governmental or Regulatory Activity'),\n",
-       " ('T089', 'Regulation or Law'),\n",
-       " ('T171', 'Language'),\n",
-       " ('T013', 'Fish'),\n",
-       " ('T018', 'Embryonic Structure'),\n",
-       " ('T020', 'Acquired Abnormality')]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[(key,get_umls_label(key)) for key in counter.keys() if key!='']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph_node_types = ['T109','T059','T197','T196','T167','T116']"
+    "# only Laboratory Procedure and chemical substances types\n",
+    "graph_node_types = ['T109','T059','T197','T196','T167','T116']  "
    ]
   },
   {
@@ -5428,8 +5177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## create keywords nodes \n",
-    "# data structure [{id,papers,type}]\n",
+    "\n",
     "## get unique keywords \n",
     "keywords_unique = []\n",
     "for key in chimestry_papers :\n",
@@ -5446,7 +5194,7 @@
    "outputs": [],
    "source": [
     "keyword_nodes = []\n",
-    "paper_dump=[]\n",
+    "\n",
     "for keyword_label in keywords_unique :\n",
     "    d=[]\n",
     "    papers_count=[]\n",
@@ -5458,10 +5206,9 @@
     "                type_= keyword['types']\n",
     "    if type_ in  graph_node_types :           \n",
     "        keyword_nodes.append([keyword_label,type_,len(papers_count),papers_count])\n",
-    "        for paper in  papers_count :\n",
-    "            paper_dump.append(paper)  \n",
     "\n",
-    "paper_dump= list(set(paper_dump))                \n",
+    "\n",
+    "              \n",
     "    "
    ]
   },
@@ -7169,62 +6916,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>type</th>\n",
-       "      <th>paper_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>258</th>\n",
-       "      <td>salicylic acid</td>\n",
-       "      <td>Organic Chemical</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 id              type  paper_count\n",
-       "258  salicylic acid  Organic Chemical            1"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nodes_pd[nodes_pd['id']=='salicylic acid']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 73,
    "metadata": {},
    "outputs": [
@@ -7354,39 +7045,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([['salicylic acid', 'X-Ray Diffraction', 1],\n",
-       "       ['salicylic acid', 'scanning electron microscopy', 1],\n",
-       "       ['salicylic acid', 'water', 1],\n",
-       "       ['salicylic acid', 'Spectrum Analysis, Raman', 1],\n",
-       "       ['salicylic acid', 'naproxen', 1],\n",
-       "       ['salicylic acid', 'ketoprofen', 1],\n",
-       "       ['salicylic acid', 'Fourier transform infrared spectrometry', 1]],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "node_id = 'salicylic acid'\n",
-    "new_d = edges_pd[(edges_pd['source']==node_id) |(edges_pd['source']==node_id)]\n",
-    "new_d.sort_values(by=['weight'],ascending=False).values"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## save data for Gephy visualization\n",
     "edges_pd.to_csv('edges_chim.csv',index=False)\n",
     "nodes_pd.to_csv('nodes_chim.csv',index=False)"
    ]
@@ -7408,6 +7071,8 @@
     }
    ],
    "source": [
+    "\n",
+    "## filtred view of graph only take one edge with max co occurence !\n",
     "def get_max_edge(node):\n",
     "    new_d = edges_pd[(edges_pd['source']==node) |(edges_pd['source']==node)]\n",
     "    try :\n",
@@ -7750,7 +7415,7 @@
    "source": [
     "edges_max = []\n",
     "for node in nodes_pd['id'].values:\n",
-    "    print(node)\n",
+    "    #print(node)\n",
     "    edge =  get_max_edge(node)\n",
     "    if edge:\n",
     "        edges_max.append(edge)"
@@ -7762,6 +7427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# df for max edge graph view\n",
     "edges_pd_max = pd.DataFrame(edges_max,columns=['source','target','weight'])"
    ]
   },
@@ -7900,6 +7566,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save data \n",
     "edges_pd_max.to_csv('edges_chim_max.csv',index=False)\n",
     "nodes_pd.to_csv('nodes_chim_max.csv',index=False)"
    ]
